# FretCoach

./: .env.example  .gitignore  CHANGELOG.md  CREATE_RELEASE.md  IMPLEMENTATION_CHECKLIST.md  MEMORY_FIX_SUMMARY.md  MERGE-CONFLICT-RISKS.md  QUICKSTART.md  README.md  README_Backup_31stJan.md  RELEASE_NOTES_v0.2.0.md  SMART_BULB_SETUP.md  baseline_experiments.json  dashboard_configs.json  final-milestone.md  online_evaluation_rules.json  opik-implemented-steps.md  pyproject.toml  setup_ai_mode.py
application/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
application/electron/: main.js  preload.js
application/src/: App.jsx  App_backup.jsx  api.js  index.css
backend/: .env.example
backend/api/: app_state.py  audio_processing.py  models.py  server.py  state.py
backend/audio-setup/: __init__.py  audio_setup.py
backend/core/: audio_config.json  audio_features.py  audio_metrics.py  audio_setup.py  fret_coach.py  llm_utils.py  scales.py  session_config.json  session_logger.py  smart_bulb.py  test_scale_conformity.py
backend/opik-eval/: opik_langgraph_agent_test.ipynb  opik_test.ipynb
backend/smart-bulb/: smart_bulb_test.ipynb
backend/sql/: add_user_configs.sql  fretcoach_supabase_schema.sql  queries.sql  schema.sql
docs/: AI_IMPLEMENTATION_SUMMARY.md  AI_INTEGRATION.md  AI_MODE_QUICKSTART.md  README.md  SESSION_LOGGER_REFACTOR.md  SESSION_LOGGING.md  _config.yml  ai-coach-agent-engine.md  ai-coaching.md  appendix-audio-math.md  architecture.md  audio-analysis-agent-engine.md  desktop-app.md  environment-setup.md  faq.md  index.md  introduction.md  judges-start-here.md  opik-observability.md  pitch-deck-ideas.md  portable-app.md  quickstart.md  troubleshooting.md  web-dashboard.md
docs/design-notes/: audio-config-rationale.md
evaluation/: README.md  __init__.py  create_datasets.py  custom_metrics.py  optimize_prompts.py  production_monitoring.py  run_baseline_experiments.py  run_experiments.py  setup_online_rules.py
evaluations/: QUICKSTART.md  README.md
notebooks/: exp.ipynb  optim-studio.ipynb  paddy-1.ipynb  trace-contents.ipynb
opik/: generate-pdf.sh  online-eval-rules.md  opik-usage.md  prod-dashboard-markdown.md
portable/: README.md  __init__.py  audio_config.json  main.py  requirements.txt  start.sh
scripts/: sync-web.sh
smart-bulb/: smart_bulb_test.ipynb  smart_bulb_test.py
summaries/: AI_MODE_REFERENCE.md
use-of-opik/: opik-usage.md
web/: README.md  start.sh
web-frontend/: vercel.json
website-interface/: README.md  index.html  package-lock.json  package.json
(+71 files in other folders)
