[project]
name = "fretcoach"
version = "0.1.0"
description = "FretCoach - An Adaptive Guitar Learning Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.3",
    "tinytuya>=1.17.4",
    "wheel>=0.45.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

