[project]
name = "fretcoach"
version = "0.3.1"
description = "FretCoach - AI-Powered Adaptive Guitar Training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "python-dotenv>=1.0.0",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.3",
    "tinytuya>=1.17.4",
    "wheel>=0.45.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "opik>=0.1.0",
    "openai>=1.12.0",
    "anthropic>=0.76.0",
    "google-genai>=1.58.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.4.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.45",
    "pydantic>=2.0.0",
    "langchain-core>=0.1.0",
    "rich>=14.2.0",
    "opik-optimizer>=3.0.1",
    "markdown>=3.10.1",
    "weasyprint>=68.0",
]

